--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1 ">
   <title>江西省统计局</title>
-  <link href="/static/css/default.css" rel="stylesheet" type="text/css">
+  <link href="/static/css/default_.css" rel="stylesheet" type="text/css">
   <script src="/static/js/jquery-1.11.3.min.js"></script>
   <script src="/static/js/responsiveslides.min.js"></script>
   <script src="/static/js/jquery.kxbdMarquee.js"></script>
@@ -29,11 +29,11 @@
   </div>
 </div>
 <ul class="Qnav">
-  <li class="Qcurrent"><a href="{{ url_for('home') }}" class="Qa1">首页</a></li>
-  <li id="zwgk201803120100392355" class=""><a href="{{ url_for('home') }}" class="Qa2">政务公开</a></li>
-  <li id="tjsj201803120100294255" class=""><a href="{{ url_for('home') }}" class="Qa3">统计数据</a></li>
-  <li id="wsbs201803120100172099" class=""><a href="{{ url_for('home') }}" class="Qa4">网上办事</a></li>
-  <li id="hdjl201803120059532727"><a href="{{ url_for('home') }}" class="Qa5">互动交流</a></li>
+  <li class="Qcurrent"><a href="{{ url_for('home') }}" class="Qa1" style="">&emsp;首页&emsp;</a></li>
+  <li id="zwgk201803120100392355" class=""><a href="{{ url_for('home') }}" class="Qa2">&nbsp;政务公开&nbsp;</a></li>
+  <li id="tjsj201803120100294255" class=""><a href="{{ url_for('home') }}" class="Qa3">&emsp;统计数据&emsp;</a></li>
+  <li id="wsbs201803120100172099" class=""><a href="{{ url_for('home') }}" class="Qa4">&nbsp;网上办事&nbsp;</a></li>
+  <li id="hdjl201803120059532727"><a href="{{ url_for('home') }}" class="Qa5">&nbsp;互动交流&nbsp;</a></li>
 </ul>
 <script>
 
