--- a/templates/news.html
+++ b/templates/news.html
@@ -19,7 +19,7 @@
       <div class="Qpage" id="contents">
         {{ data[0].content }}
         {% if data[0].file %}
-          <div><a href="/static/files/{{ data[0].file }}" download="/static/files/{{ data[0].file }}">{{ data[0].file }}</a></div>
+          <div><a href="/static/files/{{ data[0].file }}" download="/static/files/{{ data[0].file }}" style="color: #0c90cc;">点此下载附件</a></div>
         {% endif %}
       </div>
     </div>
