--- a/templates/mail_list.html
+++ b/templates/mail_list.html
@@ -61,9 +61,9 @@
       {% for c in data %}
         <tr>
           <td height="40" align="left">{{ cate }}</td>
-          <td style="text-align:left; padding-left:8px;"><a
-                  href="{{ url_for(show_type, data=c.id) }}"
-                  target="_blank">{{ c.theme }}</a></td>
+          <td style="text-align:left; padding-left:8px;">
+            <a href="{{ url_for(show_type, data=c.id) }}" target="_blank">{{ c.theme }}</a>
+          </td>
           {% if c.answer %}
             <td align="center">已处理</td>
           {% else %}
