--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1 ">
   <title>江西省统计局</title>
-  <link href="/static/css/default.css" rel="stylesheet" type="text/css">
+  <link href="/static/css/default_.css" rel="stylesheet" type="text/css">
   <script src="/static/js/jquery-1.11.3.min.js"></script>
 
 </head>
