--- a/templates/news.html
+++ b/templates/news.html
@@ -17,7 +17,9 @@
         </p>
       </div>
       <div class="Qpage" id="contents">
-        {{ data[0].content }}
+{#      {% autoescape true %}#}
+        {{ data[0].content | safe }}
+{#      {% endautoescape %}#}
         {% if data[0].file %}
           <div><a href="/static/files/{{ data[0].file }}" download="/static/files/{{ data[0].file }}" style="color: #0c90cc;">点此下载附件</a></div>
         {% endif %}
