--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -5,8 +5,10 @@
 
     <div>
       {% if current_user.is_authenticated %}
-        <div style="border: 1px solid lightgray; width:200px; height: 200px; display: inline-block"></div>
-        <div style="width:300px; height: 200px; display: inline-block">
+        <div style="border: 1px solid lightgray; width:256px; height: 182px; display: inline-block">
+          <img src="/static/img/welcome.png" alt="">
+        </div>
+        <div style="width:300px; height: 200px; display: inline-block; margin-left: 30px;">
           <span style="color: lightgray; letter-spacing: 1px;font-size: 2em;
             margin: 0.67em 0;">欢迎来到 <br> 统计局管理系统！</span><br>
           <span>{{ current_user.name }}</span>
